--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,36 +1,82 @@
+@font-face {
+    font-family: 'Parisienne';
+    src: url('../fonts/Parisienne/Parisienne-Regular.ttf');
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
+    /* padding: 1rem; */
+    font-size: 1.3rem;
+}
+
+header {
+    margin: 1rem;
+    padding: 1rem;
 }
 
 .shop-name {
-    font-size: 3rem;
+    font-family: 'Parisienne';
+    font-size: 4rem;
+    text-align: center;
+    text-transform: capitalize;
     width: fit-content;
-    margin: auto;
+    margin: 0 auto 1rem auto;
 }
 
-.menu {
+.connection {
+    display: none;
+}
+
+.burger-icon {
+    font-size: 4rem;
+    padding: 2rem;
+    cursor: pointer;
+}
+
+#toggle {
+    display: none;
+}
+
+.navbar {
+    text-align: center;
+}
+
+.navbar__menu {
+    display: none;
+    flex-direction: column;
+}
+
+#toggle:checked + .navbar__menu {
     display: flex;
-    width: fit-content;
-    margin: auto;
 }
 
-.menu__element {
+.navbar__element {
     margin: 1rem;
+    padding: 0.5rem;
+}
+
+.navbar__element--selected {
+    background-color: #c1ed89;
 }
 
 .section-title {
     font-size: 1.7rem;
     width: fit-content;
-    margin: auto;
+    margin: 2rem auto;
 }
 
 .flower-cards {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 .flower-cards__element {
-    width: 15%;
+    width: 25rem;
+    margin: 1rem;
+    /* border: solid 1px green;
+    padding: 1rem; */
 }
 
 .flower-cards__element img {
@@ -43,22 +89,81 @@ body {
 }
   
 .content-wrap {
-    padding-bottom: 2.5rem;    /* Footer height */
+    padding-bottom: 10rem;    /* Footer height */
 }
 
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;            /* Footer height */
+    height: 10rem;            /* Footer height */
+    font-size: 1.1rem;
+    background-color: lightgray;
 }
 
 .footer-links {
-    display: flex;
+    /* display: flex; */
     width: fit-content;
-    margin: auto;
+    margin: 2rem auto;
 }
 
 .footer-links__element {
-    margin: 1rem;
+    margin: 1.2rem;
+}
+
+@media screen and (min-width: 370px) {
+    .shop-name {
+        font-size: 5rem;
+    }
+
+    .flower-cards__element {
+        border: solid 1px green;
+        padding: 1rem;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .footer-links {
+        display: flex;
+        margin-top: 1rem;
+    }
+
+    .content-wrap {
+        padding-bottom: 6rem;    /* Footer height */
+    }
+    
+    footer {
+        height: 6rem;            /* Footer height */
+    }
+}
+
+@media screen and (min-width: 780px) {
+    .title-connection {
+        position: relative;
+    }
+
+    .connection {
+        font-size: 1rem;
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .navbar__element--connection {
+        display: none;
+    }
+
+    .burger-icon {
+        display: none;
+    }
+
+    .navbar__menu {
+        display: flex;
+        flex-direction: row;
+        margin: auto;
+        width: fit-content;
+        border-top: solid 1px green;
+        border-bottom: solid 1px green;
+    }
 }
